--- a/about.html
+++ b/about.html
@@ -15,7 +15,7 @@
     <main>
       <header>
         <div class="logodiv">
-        <a href="index.html"><img src="./slike/logo.png" alt="Barber Shop | logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Barber Shop | logo"></a>
       </div>
         <nav class="topnav" id="myTopnav">
 
@@ -52,7 +52,7 @@
     <p class="crvena"><em>SVI SU DOBRODOŠLI DA SE UVERE U NAŠ KVALITET. BARBER SHOP VAS SRDAČNO OČEKUJE.</em></p>
 </div>
     <div class="slika">
-         <img src="./slike/barber4.jpg" alt="Barber Shop | Owner">
+         <img src="barber4.jpg" alt="Barber Shop | Owner">
       </div>
 
   </article>
