--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <main>
       <header>
         <div class="logodiv">
-        <a href="index.html"><img src="./slike/logo.png" alt="Barber Shop | logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Barber Shop | logo"></a>
       </div>
         <nav class="topnav" id="myTopnav">
 
