--- a/gallery.html
+++ b/gallery.html
@@ -23,7 +23,7 @@
     <main>
       <header>
         <div class="logodiv">
-        <a href="index.html"><img src="./slike/logo.png" alt="Barber Shop | logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Barber Shop | logo"></a>
       </div>
         <nav class="topnav" id="myTopnav">
 
@@ -51,14 +51,14 @@
         </div>
 
            <div class="redfrizure">
-             <a href="slike/haircut1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-               <img src="./slike/haircut1.jpg" alt="Barber Shop | haircut"></a>
-               <a href="slike/haircut2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-               <img src="./slike/haircut2.jpg" alt="Barber Shop | haircut"></a>
-               <a href="slike/haircut3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-               <img src="./slike/haircut3.jpg" alt="Barber Shop | haircut"></a>
-               <a href="slike/haircut4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
-               <img src="./slike/haircut4.jpg" alt="Barber Shop | haircut"></a>
+             <a href="haircut1.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+               <img src="haircut1.jpg" alt="Barber Shop | haircut"></a>
+               <a href="haircut2.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+               <img src="haircut2.jpg" alt="Barber Shop | haircut"></a>
+               <a href="haircut3.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+               <img src="haircut3.jpg" alt="Barber Shop | haircut"></a>
+               <a href="haircut4.jpg" data-toggle="lightbox" data-gallery="example-gallery">
+               <img src="haircut4.jpg" alt="Barber Shop | haircut"></a>
              </div>
         </article>
 
@@ -71,14 +71,14 @@
           </div>
 
           <div class="redbrade">
-            <a href="slike/beard1.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
-              <img src="./slike/beard1.jpg" alt="Barber Shop | beard"></a>
-              <a href="slike/beard2.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
-              <img src="./slike/beard2.jpg" alt="Barber Shop | beard"></a>
-              <a href="slike/beard3.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
-              <img src="./slike/beard3.jpg" alt="Barber Shop | beard"></a>
-              <a href="slike/beard4.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
-              <img src="./slike/beard4.jpg" alt="Barber Shop | beard"></a>
+            <a href="beard1.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
+              <img src="beard1.jpg" alt="Barber Shop | beard"></a>
+              <a href="beard2.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
+              <img src="beard2.jpg" alt="Barber Shop | beard"></a>
+              <a href="beard3.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
+              <img src="beard3.jpg" alt="Barber Shop | beard"></a>
+              <a href="beard4.jpg" data-toggle="lightbox2" data-gallery="example-gallery2">
+              <img src="beard4.jpg" alt="Barber Shop | beard"></a>
             </div>
 
           </article>
@@ -92,14 +92,14 @@
             </div>
 
             <div class="redbrkovi">
-              <a href="slike/mustache1.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
-                <img src="./slike/mustache1.jpg" alt="Barber Shop | mustache"></a>
-                <a href="slike/mustache2.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
-                <img src="./slike/mustache2.jpg" alt="Barber Shop | mustache"></a>
-                <a href="slike/mustache3.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
-                <img src="./slike/mustache3.jpg" alt="Barber Shop | mustache"></a>
-                <a href="slike/mustache4.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
-                <img src="./slike/mustache4.jpg" alt="Barber Shop | mustache"></a>
+              <a href="mustache1.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
+                <img src="mustache1.jpg" alt="Barber Shop | mustache"></a>
+                <a href="mustache2.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
+                <img src="mustache2.jpg" alt="Barber Shop | mustache"></a>
+                <a href="mustache3.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
+                <img src="mustache3.jpg" alt="Barber Shop | mustache"></a>
+                <a href="mustache4.jpg" data-toggle="lightbox3" data-gallery="example-gallery3">
+                <img src="mustache4.jpg" alt="Barber Shop | mustache"></a>
               </div>
 
             </article>
