--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <header>
         <!--logo...-->
         <div class="logodiv">
-        <a href="index.html"><img src="slike/logo.png" alt="Barber Shop | logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Barber Shop | logo"></a>
       </div>
       <!--...kraj logo-->
 
@@ -79,7 +79,7 @@
         <p>---- PONOSNI NA SVAKU USLUGU</p>
 
          <div class="redservis"><!--red...-->
-          <img src="slike/makaze.png" alt="Barber Shop | makaze">
+          <img src="makaze.png" alt="Barber Shop | makaze">
           <div>
             <h3>ŠIŠANJE</h3>
           <p>Šišanje na najvišem nivou. U sigurnim ste rukama.</p>
@@ -87,7 +87,7 @@
       </div><!--...kraj reda-->
 
          <div class="redservis">
-          <img src="slike/brijanje.png" alt="Barber Shop | brijac">
+          <img src="brijanje.png" alt="Barber Shop | brijac">
           <div>
             <h3>BRIJANJE</h3>
           <p>Brijanje na najvišem nivou. Kvalitet na prvom mestu.</p>
@@ -95,7 +95,7 @@
          </div>
 
          <div class="redservis">
-          <img src="slike/brada.png" alt="Barber Shop | brada">
+          <img src="brada.png" alt="Barber Shop | brada">
           <div>
             <h3>PODREZIVANJE BRADE</h3>
           <p>Oblikovanje brade na najvišem nivou. Moderno je naš moto.</p>
@@ -103,7 +103,7 @@
          </div>
 
          <div class="redservis poslednji">
-          <img src="slike/brkovi.png" alt="Barber Shop | brkovi">
+          <img src="brkovi.png" alt="Barber Shop | brkovi">
           <div>
             <h3>PODREZIVANJE BRKOVA</h3>
           <p>Oblikovanje brkova na najvišem nivou. U sigurnim ste rukama.</p>
@@ -168,17 +168,17 @@
 
           <div class="redslike">
              <div>
-                <img src="slike/barber1.jpg" alt="Barber Shop | Thomas">
+                <img src="barber1.jpg" alt="Barber Shop | Thomas">
                 <h4>EKSPERT ZA BRKOVE</h4>
                 <p>Toma je i osnivač i vlasnik Barber Shop-a.</p>
              </div>
              <div>
-                <img src="slike/barber2.jpg" alt="Barber Shop | Edward">
+                <img src="barber2.jpg" alt="Barber Shop | Edward">
                 <h4>TRIMER BRADE</h4>
                 <p>Nenad je u barber industriji preko 10 godina.</p>
              </div>
              <div>
-                <img src="slike/barber3.jpg" alt="Barber Shop | Roy">
+                <img src="barber3.jpg" alt="Barber Shop | Roy">
                 <h4>SPECIJALISTA ZA KOSU</h4>
                 <p>Boban je veoma kreativan, a sa nama je od 2010.</p>
              </div>
