--- a/shop.html
+++ b/shop.html
@@ -15,7 +15,7 @@
     <main>
       <header>
         <div class="logodiv">
-        <a href="index.html"><img src="./slike/logo.png" alt="Barber Shop | logo"></a>
+        <a href="index.html"><img src="logo.png" alt="Barber Shop | logo"></a>
       </div>
         <nav class="topnav" id="myTopnav">
 
@@ -36,21 +36,21 @@
       <article id="proizvodi">
            <div class="red">
                <div>
-                <img src="./slike/kompmali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
+                <img src="kompmali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
                 title="Opis proizvoda">
                 <h2>Komplet za šišanje</h2>
                 <p>Cena: <strong>20 <span>RSD</span></strong></p>
                 <input type="number" id="kol1" min=0 value=0>
               </div>
               <div>
-               <img src="./slike/elmali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
+               <img src="elmali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
                title="Opis proizvoda">
                <h2>Mašinica za šišanje</h2>
                <p>Cena: <strong>10 <span>RSD</span></strong></p>
                <input type="number" id="kol2" min=0 value=0>
              </div>
              <div>
-              <img src="./slike/makamali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
+              <img src="makamali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
               title="Opis proizvoda">
               <h2>Makaze za šišanje</h2>
               <p>Cena: <strong>30 <span>RSD</span></strong></p>
@@ -58,21 +58,21 @@
             </div>
 
                <div>
-                <img src="./slike/setmali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
+                <img src="setmali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
                 title="Opis proizvoda">
                 <h2>Set za brijanje</h2>
                 <p>Cena: <strong>50 <span>RSD</span></strong></p>
                 <input type="number" id="kol4" min=0 value=0>
                </div>
                <div>
-               <img src="./slike/maka2mali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
+               <img src="maka2mali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
                title="Opis proizvoda">
                <h2>Makaze 2</h2>
                <p>Cena: <strong>70 <span>RSD</span></strong></p>
                <input type="number" id="kol5" min=0 value=0>
                </div>
                <div>
-               <img src="./slike/brijacimali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
+               <img src="brijacimali.jpg" alt="Barber shop | proizvod" data-toggle="tooltip" data-placement="top"
                title="Opis proizvoda">
                <h2>Brijači</h2>
                <p>Cena: <strong>50 <span>RSD</span></strong></p>
