--- a/contact.html
+++ b/contact.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Dusan Randjelovic | dusanrandjelovic92@gmail.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="./css/contact.css">
+    <link rel="stylesheet" href="contact.css">
   </head>
   <body>
     <main>
@@ -112,7 +112,7 @@
 
 
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/contact.js"></script>
+    <script src="main.js"></script>
+    <script src="contact.js"></script>
       </body>
       </html>
