--- a/gallery.html
+++ b/gallery.html
@@ -17,7 +17,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.2.0/ekko-lightbox.min.js"></script>
 
-    <link rel="stylesheet" href="./css/gallery.css">
+    <link rel="stylesheet" href="gallery.css">
   </head>
   <body>
     <main>
@@ -132,7 +132,7 @@
       <p>Copyright &copy; 2019 Barber Shop | Sva prava zadržana.</p>
     </div>
     </footer>
-<script src="js/gallery.js"></script>
-    <script src="./js/main.js"></script>
+<script src="gallery.js"></script>
+    <script src="main.js"></script>
       </body>
       </html>
