--- a/shop.html
+++ b/shop.html
@@ -9,7 +9,7 @@
     <meta name="author" content="Dusan Randjelovic | dusanrandjelovic92@gmail.com">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
-    <link rel="stylesheet" href="./css/shop.css">
+    <link rel="stylesheet" href="shop.css">
   </head>
   <body>
     <main>
@@ -153,7 +153,7 @@
     </div>
     </footer>
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.0/jquery.min.js"></script>
-    <script src="./js/main.js"></script>
-    <script src="./js/shop.js"></script>
+    <script src="main.js"></script>
+    <script src="shop.js"></script>
       </body>
       </html>
